kubernetes/apps/network/envoy-gateway/config/envoy.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IEhjcXg4ZW1V
[...]
        LuWlnTF9eZmtXmo=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq1gt53jawqp8al0dmpzf39qxpmhux2g9sqdylryy0h2wqga3e0y4c4vd8f552gsnm6vpzskcpn37j4ma9vrpz2h3z926kxzynkxrysdgug5ykvx4pxvuvwm7zcgk43r3dtwnsj8demqf663j48tdx9qfa8vzd99nzcu2y8u7ej4amrw64qetj4hp776txdya5xgrfyywvp9dtun8rk3jn4y0zk5un4zjeewxegfd9vevx5cqxryxvm8dtg3ppdxgv5vfa0jwvk8l6z3h46f3w9z628sa739ddsuumkdwjg8s3c09wnl293hxz0dca9ttwztgtqhpjnj50sxu2sfxdcc3l6c7e5rw2uqjsq2dmgnmxf3v9y27edvafmgssckv6my0z9hkvzdcdafxv7pynel0xyjfan4ennwgd7j9yvg7x8ueahgjq5rh4eq5u4whzwknz0wgz4ccye2kstjazhttmqmnye [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-10-10T09:44:05Z"
  mac: ENC[AES256_GCM,data:v644xn5rWUMGgGlf+9deDdZz/77kJhg6Kjcd/TxkvR7mG/MRqXk4mbUUEyDvP+ocFZibp17+Kds2R/CjXXyRAYxXWrasP0x3phCaBw+2PFC6DzLUTPoPhvMCNzUPGaEuxc8J2UqkMl6PeeMY5TMNr9K5sF29/WXmfAxaXxR96A4=,iv:hUTOe2AJ9JgdkM32TyLftSkp8R1GuqQG85ifDJJaW+k=,tag:H49DsKXqkfVVpBWc4Q2F8g==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.aknuk.dev
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.aknuk.dev
      lbipam.cilium.io/ips: 192.168.8.203
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IEhjcXg4ZW1V
[...]
        LuWlnTF9eZmtXmo=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq1gt53jawqp8al0dmpzf39qxpmhux2g9sqdylryy0h2wqga3e0y4c4vd8f552gsnm6vpzskcpn37j4ma9vrpz2h3z926kxzynkxrysdgug5ykvx4pxvuvwm7zcgk43r3dtwnsj8demqf663j48tdx9qfa8vzd99nzcu2y8u7ej4amrw64qetj4hp776txdya5xgrfyywvp9dtun8rk3jn4y0zk5un4zjeewxegfd9vevx5cqxryxvm8dtg3ppdxgv5vfa0jwvk8l6z3h46f3w9z628sa739ddsuumkdwjg8s3c09wnl293hxz0dca9ttwztgtqhpjnj50sxu2sfxdcc3l6c7e5rw2uqjsq2dmgnmxf3v9y27edvafmgssckv6my0z9hkvzdcdafxv7pynel0xyjfan4ennwgd7j9yvg7x8ueahgjq5rh4eq5u4whzwknz0wgz4ccye2kstjazhttmqmnye [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-10-10T09:44:05Z"
  mac: ENC[AES256_GCM,data:v644xn5rWUMGgGlf+9deDdZz/77kJhg6Kjcd/TxkvR7mG/MRqXk4mbUUEyDvP+ocFZibp17+Kds2R/CjXXyRAYxXWrasP0x3phCaBw+2PFC6DzLUTPoPhvMCNzUPGaEuxc8J2UqkMl6PeeMY5TMNr9K5sF29/WXmfAxaXxR96A4=,iv:hUTOe2AJ9JgdkM32TyLftSkp8R1GuqQG85ifDJJaW+k=,tag:H49DsKXqkfVVpBWc4Q2F8g==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.aknuk.dev
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.aknuk.dev
      lbipam.cilium.io/ips: 192.168.8.201
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IEhjcXg4ZW1V
[...]
        LuWlnTF9eZmtXmo=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq1gt53jawqp8al0dmpzf39qxpmhux2g9sqdylryy0h2wqga3e0y4c4vd8f552gsnm6vpzskcpn37j4ma9vrpz2h3z926kxzynkxrysdgug5ykvx4pxvuvwm7zcgk43r3dtwnsj8demqf663j48tdx9qfa8vzd99nzcu2y8u7ej4amrw64qetj4hp776txdya5xgrfyywvp9dtun8rk3jn4y0zk5un4zjeewxegfd9vevx5cqxryxvm8dtg3ppdxgv5vfa0jwvk8l6z3h46f3w9z628sa739ddsuumkdwjg8s3c09wnl293hxz0dca9ttwztgtqhpjnj50sxu2sfxdcc3l6c7e5rw2uqjsq2dmgnmxf3v9y27edvafmgssckv6my0z9hkvzdcdafxv7pynel0xyjfan4ennwgd7j9yvg7x8ueahgjq5rh4eq5u4whzwknz0wgz4ccye2kstjazhttmqmnye [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-10-10T09:44:05Z"
  mac: ENC[AES256_GCM,data:v644xn5rWUMGgGlf+9deDdZz/77kJhg6Kjcd/TxkvR7mG/MRqXk4mbUUEyDvP+ocFZibp17+Kds2R/CjXXyRAYxXWrasP0x3phCaBw+2PFC6DzLUTPoPhvMCNzUPGaEuxc8J2UqkMl6PeeMY5TMNr9K5sF29/WXmfAxaXxR96A4=,iv:hUTOe2AJ9JgdkM32TyLftSkp8R1GuqQG85ifDJJaW+k=,tag:H49DsKXqkfVVpBWc4Q2F8g==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IEhjcXg4ZW1V
[...]
        LuWlnTF9eZmtXmo=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq1gt53jawqp8al0dmpzf39qxpmhux2g9sqdylryy0h2wqga3e0y4c4vd8f552gsnm6vpzskcpn37j4ma9vrpz2h3z926kxzynkxrysdgug5ykvx4pxvuvwm7zcgk43r3dtwnsj8demqf663j48tdx9qfa8vzd99nzcu2y8u7ej4amrw64qetj4hp776txdya5xgrfyywvp9dtun8rk3jn4y0zk5un4zjeewxegfd9vevx5cqxryxvm8dtg3ppdxgv5vfa0jwvk8l6z3h46f3w9z628sa739ddsuumkdwjg8s3c09wnl293hxz0dca9ttwztgtqhpjnj50sxu2sfxdcc3l6c7e5rw2uqjsq2dmgnmxf3v9y27edvafmgssckv6my0z9hkvzdcdafxv7pynel0xyjfan4ennwgd7j9yvg7x8ueahgjq5rh4eq5u4whzwknz0wgz4ccye2kstjazhttmqmnye [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-10-10T09:44:05Z"
  mac: ENC[AES256_GCM,data:v644xn5rWUMGgGlf+9deDdZz/77kJhg6Kjcd/TxkvR7mG/MRqXk4mbUUEyDvP+ocFZibp17+Kds2R/CjXXyRAYxXWrasP0x3phCaBw+2PFC6DzLUTPoPhvMCNzUPGaEuxc8J2UqkMl6PeeMY5TMNr9K5sF29/WXmfAxaXxR96A4=,iv:hUTOe2AJ9JgdkM32TyLftSkp8R1GuqQG85ifDJJaW+k=,tag:H49DsKXqkfVVpBWc4Q2F8g==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IEhjcXg4ZW1V
[...]
        LuWlnTF9eZmtXmo=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq1gt53jawqp8al0dmpzf39qxpmhux2g9sqdylryy0h2wqga3e0y4c4vd8f552gsnm6vpzskcpn37j4ma9vrpz2h3z926kxzynkxrysdgug5ykvx4pxvuvwm7zcgk43r3dtwnsj8demqf663j48tdx9qfa8vzd99nzcu2y8u7ej4amrw64qetj4hp776txdya5xgrfyywvp9dtun8rk3jn4y0zk5un4zjeewxegfd9vevx5cqxryxvm8dtg3ppdxgv5vfa0jwvk8l6z3h46f3w9z628sa739ddsuumkdwjg8s3c09wnl293hxz0dca9ttwztgtqhpjnj50sxu2sfxdcc3l6c7e5rw2uqjsq2dmgnmxf3v9y27edvafmgssckv6my0z9hkvzdcdafxv7pynel0xyjfan4ennwgd7j9yvg7x8ueahgjq5rh4eq5u4whzwknz0wgz4ccye2kstjazhttmqmnye [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-10-10T09:44:05Z"
  mac: ENC[AES256_GCM,data:v644xn5rWUMGgGlf+9deDdZz/77kJhg6Kjcd/TxkvR7mG/MRqXk4mbUUEyDvP+ocFZibp17+Kds2R/CjXXyRAYxXWrasP0x3phCaBw+2PFC6DzLUTPoPhvMCNzUPGaEuxc8J2UqkMl6PeeMY5TMNr9K5sF29/WXmfAxaXxR96A4=,iv:hUTOe2AJ9JgdkM32TyLftSkp8R1GuqQG85ifDJJaW+k=,tag:H49DsKXqkfVVpBWc4Q2F8g==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
